// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workflow non-ideal-states workflow interval query empty matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
      >
        <div
          class="bp4-non-ideal-state"
        >
          <h4
            class="bp4-heading"
          >
            No data
          </h4>
          <div>
            Stage intervals returned empty
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
    >
      <div
        class="bp4-non-ideal-state"
      >
        <h4
          class="bp4-heading"
        >
          No data
        </h4>
        <div>
          Stage intervals returned empty
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`workflow non-ideal-states workflow interval query error matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
      >
        <div
          class="bp4-non-ideal-state"
        >
          <h4
            class="bp4-heading"
          >
            Error
          </h4>
          <div>
            Problem Loading Workflow Interval Data
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
    >
      <div
        class="bp4-non-ideal-state"
      >
        <h4
          class="bp4-heading"
        >
          Error
        </h4>
        <div>
          Problem Loading Workflow Interval Data
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`workflow non-ideal-states workflow interval query loading matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
      >
        <div
          class="bp4-non-ideal-state"
        >
          <h4
            class="bp4-heading"
          >
            Loading
          </h4>
          <div>
            Workflow Interval Data
          </div>
          <div
            class="bp4-spinner bp4-intent-primary"
            role="progressbar"
          >
            <div
              class="bp4-spinner-animation"
            >
              <svg
                height="50"
                stroke-width="8.00"
                viewBox="1.00 1.00 98.00 98.00"
                width="50"
              >
                <path
                  class="bp4-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp4-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
    >
      <div
        class="bp4-non-ideal-state"
      >
        <h4
          class="bp4-heading"
        >
          Loading
        </h4>
        <div>
          Workflow Interval Data
        </div>
        <div
          class="bp4-spinner bp4-intent-primary"
          role="progressbar"
        >
          <div
            class="bp4-spinner-animation"
          >
            <svg
              height="50"
              stroke-width="8.00"
              viewBox="1.00 1.00 98.00 98.00"
              width="50"
            >
              <path
                class="bp4-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp4-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`workflow non-ideal-states workflow interval query reloading matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
      >
        <div
          class="workflow-panel"
          data-cy="workflow-panel"
          tabindex="0"
        >
          <div
            class="toolbar"
            style="width: 1860px;"
          >
            <div
              class="toolbar__left-group"
            >
              <div
                class="toolbar-item toolbar-item__left"
              >
                <div
                  class="toolbar-label-value"
                >
                  <div
                    class="ian-label-value-container"
                  >
                    <div
                      class="ian-label-value__label"
                      data-cy="open-time-range-label"
                    >
                      Open time range: 
                    </div>
                    <div
                      class="ian-label-value__value"
                      data-cy="open-time-range-value"
                      title="The opened time range"
                    >
                      N/A
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="toolbar-item toolbar-item__left"
              >
                <div
                  class="toolbar-label-value"
                  style="margin-left: 8em;"
                >
                  <div
                    class="ian-label-value-container"
                  >
                    <div
                      class="ian-label-value__label"
                      data-cy="processing-stage-label"
                    >
                      Processing stage: 
                    </div>
                    <div
                      class="ian-label-value__value"
                      data-cy="processing-stage-value"
                      title="The opened processing stage"
                    >
                      N/A
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="toolbar__center-group"
            >
              <div
                class="toolbar__whitespace"
                style="width: 1860px;"
              />
            </div>
            <div
              class="toolbar__right-group"
            >
              <div
                class="toolbar-item
                  "
              >
                <div>
                  <button
                    class="bp4-button toolbar-button--icon-only"
                    data-cy="workflow-doubleLeftArrowItem"
                    style="width: 20px;"
                    title="Pan the workflow to the left by  (Shift + ←)"
                    type="button"
                  >
                    <span
                      class="bp4-button-text"
                    >
                      <span
                        aria-hidden="true"
                        class="bp4-icon bp4-icon-double-chevron-left"
                        icon="double-chevron-left"
                      >
                        <svg
                          data-icon="double-chevron-left"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M4.41 8L7.7 4.71c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C2.11 7.47 2 7.72 2 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L4.41 8zm5 0l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C7.11 7.47 7 7.72 7 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L9.41 8z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="toolbar-item
                  "
              >
                <div>
                  <button
                    class="bp4-button toolbar-button--icon-only"
                    data-cy="workflow-singleLeftArrowItem"
                    style="width: 20px;"
                    title="Pan the workflow to the left by  (←)"
                    type="button"
                  >
                    <span
                      class="bp4-button-text"
                    >
                      <span
                        aria-hidden="true"
                        class="bp4-icon bp4-icon-chevron-left"
                        icon="chevron-left"
                      >
                        <svg
                          data-icon="chevron-left"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="toolbar-item
                  "
              >
                <div>
                  <button
                    class="bp4-button toolbar-button--icon-only"
                    data-cy="workflow-singleRightArrowItem"
                    style="width: 20px;"
                    title="Pan the workflow to the right by  (→)"
                    type="button"
                  >
                    <span
                      class="bp4-button-text"
                    >
                      <span
                        aria-hidden="true"
                        class="bp4-icon bp4-icon-chevron-right"
                        icon="chevron-right"
                      >
                        <svg
                          data-icon="chevron-right"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="toolbar-item
                  "
              >
                <div>
                  <button
                    class="bp4-button toolbar-button--icon-only"
                    data-cy="workflow-doubleRightArrowItem"
                    style="width: 20px;"
                    title="Pan the workflow to the right by  (Shift + →)"
                    type="button"
                  >
                    <span
                      class="bp4-button-text"
                    >
                      <span
                        aria-hidden="true"
                        class="bp4-icon bp4-icon-double-chevron-right"
                        icon="double-chevron-right"
                      >
                        <svg
                          data-icon="double-chevron-right"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M9 8c0-.28-.11-.53-.29-.71l-4-4a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4C8.89 8.53 9 8.28 9 8zm4.71-.71l-4-4a1.003 1.003 0 00-1.42 1.42L11.59 8 8.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="toolbar-item
                  "
              >
                <div>
                  <button
                    class="bp4-button bp4-align-left toolbar-button"
                    data-cy="workflow-openAnythingButtonItem"
                    style="width: 160px;"
                    title="Open anything"
                    type="button"
                  >
                    <span
                      class="bp4-button-text"
                    >
                      <span />
                      <span
                        aria-hidden="true"
                        class="bp4-icon bp4-icon-search-template"
                        icon="search-template"
                      >
                        <svg
                          data-icon="search-template"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M15.55 13.43l-2.67-2.67c.7-1.09 1.11-2.38 1.11-3.77 0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.41 3.77-1.11l2.67 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm2.5-6h-5c-.28 0-.5.22-.5.5s.22.5.5.5h5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm0-2h-5c-.28 0-.5.22-.5.5s.22.5.5.5h5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm0 4h-5c-.28 0-.5.22-.5.5s.22.5.5.5h5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                      <span>
                        Open anything...
                      </span>
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="workflow-table"
            style="height: 1130px;"
          >
            <div
              class="workflow-table-container"
            >
              <div
                class="workflow-table__curtain-left"
                style="height: 48px;"
              />
              <div
                class="workflow-table__buttons"
              >
                <div
                  class="workflow-button"
                  data-cy="workflow-expand-AL1"
                >
                  <div
                    class="workflow-button__expand_collapse"
                  >
                    <button
                      class="bp4-button stage-row__expand-button"
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                        class="bp4-icon bp4-icon-small-plus"
                        icon="small-plus"
                      >
                        <svg
                          data-icon="small-plus"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="workflow-button"
                  data-cy="workflow-expand-Auto Network"
                >
                  <div
                    class="workflow-button__expand_collapse"
                  >
                    <button
                      class="bp4-button stage-row__expand-button"
                      type="button"
                    >
                      <span
                        aria-hidden="true"
                        class="bp4-icon bp4-icon-small-plus"
                        icon="small-plus"
                      >
                        <svg
                          data-icon="small-plus"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <path
                            d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
              <div>
                <div
                  class="workflow-day-boundary-container"
                  style="width: 120px; height: 48px; margin-left: 0px;"
                />
                <div
                  data-cy="workflow-table__container"
                  role="presentation"
                  style="height: 48px;"
                >
                  <div
                    aria-label="grid"
                    class="ReactVirtualized__Collection"
                    role="grid"
                    style="box-sizing: border-box; direction: ltr; height: 48px; position: relative; width: 1693px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
                    tabindex="0"
                  >
                    <div
                      class="ReactVirtualized__Collection__innerScrollContainer"
                      style="height: 48px; max-height: 48px; max-width: 120px; overflow: hidden; width: 120px;"
                    >
                      <div
                        style="height: 24px; left: 0px; position: absolute; top: 0px; width: 4px;"
                      />
                      <div
                        style="height: 24px; left: 0px; position: absolute; top: 0px; width: 120px;"
                      >
                        <div
                          class="bp4-popover-wrapper core-tooltip"
                        >
                          <div
                            aria-haspopup="true"
                            class="bp4-popover-target core-tooltip__target"
                          >
                            <div
                              class="interval-cell interval-cell--in-progress interval-cell--stale"
                              data-cy="INTERACTIVE"
                              data-interval="generic-interval"
                              data-sequence-interval="AL1"
                              data-start-time="1622053587"
                            />
                          </div>
                        </div>
                      </div>
                      <div
                        style="height: 24px; left: 116px; position: absolute; top: 0px; width: 4px;"
                      />
                      <div
                        style="height: 24px; left: 0px; position: absolute; top: 24px; width: 4px;"
                      />
                      <div
                        style="height: 24px; left: 116px; position: absolute; top: 24px; width: 4px;"
                      />
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="workflow-table__labels"
                style="height: 48px;"
              >
                <div
                  class="workflow-table-label"
                  data-cy="workflow-table-label-AL1"
                >
                  <div>
                    AL1
                  </div>
                </div>
                <div
                  class="workflow-table-label"
                  data-cy="workflow-table-label-Auto Network"
                >
                  <div>
                    Auto Network
                  </div>
                </div>
              </div>
              <div
                class="workflow-table__curtain-right"
                style="height: 48px;"
              />
            </div>
            <div
              class="workflow-table__time-axis"
            >
              <div
                class="scroll-bar-override"
                style="width: 1693px;"
              >
                <div
                  class="scroll-bar scroll-box--x"
                  data-cy="ReactVirtualized__Collection-gutter-scrollbar-override"
                >
                  <div
                    class="scroll-bar__bar scroll-box--x"
                    data-cy="ReactVirtualized__Collection-scrollbar-override"
                    style="width: 0px; transform: translate(NaNpx, 0px);"
                  />
                </div>
              </div>
              <div
                class="time-axis-wrapper"
                style="width: 1693px;"
              >
                <div
                  class="time-axis"
                >
                  <svg
                    height="25"
                    style="fill: #fff;"
                    width="120"
                  >
                    <g
                      class="workflow-time-axis"
                      fill="none"
                      font-family="sans-serif"
                      font-size="10"
                      text-anchor="middle"
                    >
                      <path
                        class="domain"
                        d="M2,0.5H122"
                        stroke="currentColor"
                      />
                      <g
                        class="tick"
                        opacity="1"
                        transform="translate(69.1,0)"
                      >
                        <line
                          stroke="currentColor"
                          y2="6"
                        />
                        <text
                          dy="0.71em"
                          fill="currentColor"
                          y="9"
                        >
                          19:00
                        </text>
                      </g>
                    </g>
                  </svg>
                </div>
              </div>
              <div
                class="workflow-time-range"
              >
                <span
                  class="time-range-left"
                >
                  2021-05-26
                </span>
                <span
                  class="time-range-right"
                >
                  2021-05-26
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
    >
      <div
        class="workflow-panel"
        data-cy="workflow-panel"
        tabindex="0"
      >
        <div
          class="toolbar"
          style="width: 1860px;"
        >
          <div
            class="toolbar__left-group"
          >
            <div
              class="toolbar-item toolbar-item__left"
            >
              <div
                class="toolbar-label-value"
              >
                <div
                  class="ian-label-value-container"
                >
                  <div
                    class="ian-label-value__label"
                    data-cy="open-time-range-label"
                  >
                    Open time range: 
                  </div>
                  <div
                    class="ian-label-value__value"
                    data-cy="open-time-range-value"
                    title="The opened time range"
                  >
                    N/A
                  </div>
                </div>
              </div>
            </div>
            <div
              class="toolbar-item toolbar-item__left"
            >
              <div
                class="toolbar-label-value"
                style="margin-left: 8em;"
              >
                <div
                  class="ian-label-value-container"
                >
                  <div
                    class="ian-label-value__label"
                    data-cy="processing-stage-label"
                  >
                    Processing stage: 
                  </div>
                  <div
                    class="ian-label-value__value"
                    data-cy="processing-stage-value"
                    title="The opened processing stage"
                  >
                    N/A
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="toolbar__center-group"
          >
            <div
              class="toolbar__whitespace"
              style="width: 1860px;"
            />
          </div>
          <div
            class="toolbar__right-group"
          >
            <div
              class="toolbar-item
                  "
            >
              <div>
                <button
                  class="bp4-button toolbar-button--icon-only"
                  data-cy="workflow-doubleLeftArrowItem"
                  style="width: 20px;"
                  title="Pan the workflow to the left by  (Shift + ←)"
                  type="button"
                >
                  <span
                    class="bp4-button-text"
                  >
                    <span
                      aria-hidden="true"
                      class="bp4-icon bp4-icon-double-chevron-left"
                      icon="double-chevron-left"
                    >
                      <svg
                        data-icon="double-chevron-left"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M4.41 8L7.7 4.71c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C2.11 7.47 2 7.72 2 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L4.41 8zm5 0l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C7.11 7.47 7 7.72 7 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L9.41 8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="toolbar-item
                  "
            >
              <div>
                <button
                  class="bp4-button toolbar-button--icon-only"
                  data-cy="workflow-singleLeftArrowItem"
                  style="width: 20px;"
                  title="Pan the workflow to the left by  (←)"
                  type="button"
                >
                  <span
                    class="bp4-button-text"
                  >
                    <span
                      aria-hidden="true"
                      class="bp4-icon bp4-icon-chevron-left"
                      icon="chevron-left"
                    >
                      <svg
                        data-icon="chevron-left"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="toolbar-item
                  "
            >
              <div>
                <button
                  class="bp4-button toolbar-button--icon-only"
                  data-cy="workflow-singleRightArrowItem"
                  style="width: 20px;"
                  title="Pan the workflow to the right by  (→)"
                  type="button"
                >
                  <span
                    class="bp4-button-text"
                  >
                    <span
                      aria-hidden="true"
                      class="bp4-icon bp4-icon-chevron-right"
                      icon="chevron-right"
                    >
                      <svg
                        data-icon="chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="toolbar-item
                  "
            >
              <div>
                <button
                  class="bp4-button toolbar-button--icon-only"
                  data-cy="workflow-doubleRightArrowItem"
                  style="width: 20px;"
                  title="Pan the workflow to the right by  (Shift + →)"
                  type="button"
                >
                  <span
                    class="bp4-button-text"
                  >
                    <span
                      aria-hidden="true"
                      class="bp4-icon bp4-icon-double-chevron-right"
                      icon="double-chevron-right"
                    >
                      <svg
                        data-icon="double-chevron-right"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M9 8c0-.28-.11-.53-.29-.71l-4-4a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4C8.89 8.53 9 8.28 9 8zm4.71-.71l-4-4a1.003 1.003 0 00-1.42 1.42L11.59 8 8.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <div
              class="toolbar-item
                  "
            >
              <div>
                <button
                  class="bp4-button bp4-align-left toolbar-button"
                  data-cy="workflow-openAnythingButtonItem"
                  style="width: 160px;"
                  title="Open anything"
                  type="button"
                >
                  <span
                    class="bp4-button-text"
                  >
                    <span />
                    <span
                      aria-hidden="true"
                      class="bp4-icon bp4-icon-search-template"
                      icon="search-template"
                    >
                      <svg
                        data-icon="search-template"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M15.55 13.43l-2.67-2.67c.7-1.09 1.11-2.38 1.11-3.77 0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.41 3.77-1.11l2.67 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm2.5-6h-5c-.28 0-.5.22-.5.5s.22.5.5.5h5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm0-2h-5c-.28 0-.5.22-.5.5s.22.5.5.5h5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5zm0 4h-5c-.28 0-.5.22-.5.5s.22.5.5.5h5c.28 0 .5-.22.5-.5s-.22-.5-.5-.5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <span>
                      Open anything...
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="workflow-table"
          style="height: 1130px;"
        >
          <div
            class="workflow-table-container"
          >
            <div
              class="workflow-table__curtain-left"
              style="height: 48px;"
            />
            <div
              class="workflow-table__buttons"
            >
              <div
                class="workflow-button"
                data-cy="workflow-expand-AL1"
              >
                <div
                  class="workflow-button__expand_collapse"
                >
                  <button
                    class="bp4-button stage-row__expand-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp4-icon bp4-icon-small-plus"
                      icon="small-plus"
                    >
                      <svg
                        data-icon="small-plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="workflow-button"
                data-cy="workflow-expand-Auto Network"
              >
                <div
                  class="workflow-button__expand_collapse"
                >
                  <button
                    class="bp4-button stage-row__expand-button"
                    type="button"
                  >
                    <span
                      aria-hidden="true"
                      class="bp4-icon bp4-icon-small-plus"
                      icon="small-plus"
                    >
                      <svg
                        data-icon="small-plus"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <path
                          d="M11 7H9V5c0-.55-.45-1-1-1s-1 .45-1 1v2H5c-.55 0-1 .45-1 1s.45 1 1 1h2v2c0 .55.45 1 1 1s1-.45 1-1V9h2c.55 0 1-.45 1-1s-.45-1-1-1z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
            </div>
            <div>
              <div
                class="workflow-day-boundary-container"
                style="width: 120px; height: 48px; margin-left: 0px;"
              />
              <div
                data-cy="workflow-table__container"
                role="presentation"
                style="height: 48px;"
              >
                <div
                  aria-label="grid"
                  class="ReactVirtualized__Collection"
                  role="grid"
                  style="box-sizing: border-box; direction: ltr; height: 48px; position: relative; width: 1693px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
                  tabindex="0"
                >
                  <div
                    class="ReactVirtualized__Collection__innerScrollContainer"
                    style="height: 48px; max-height: 48px; max-width: 120px; overflow: hidden; width: 120px;"
                  >
                    <div
                      style="height: 24px; left: 0px; position: absolute; top: 0px; width: 4px;"
                    />
                    <div
                      style="height: 24px; left: 0px; position: absolute; top: 0px; width: 120px;"
                    >
                      <div
                        class="bp4-popover-wrapper core-tooltip"
                      >
                        <div
                          aria-haspopup="true"
                          class="bp4-popover-target core-tooltip__target"
                        >
                          <div
                            class="interval-cell interval-cell--in-progress interval-cell--stale"
                            data-cy="INTERACTIVE"
                            data-interval="generic-interval"
                            data-sequence-interval="AL1"
                            data-start-time="1622053587"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      style="height: 24px; left: 116px; position: absolute; top: 0px; width: 4px;"
                    />
                    <div
                      style="height: 24px; left: 0px; position: absolute; top: 24px; width: 4px;"
                    />
                    <div
                      style="height: 24px; left: 116px; position: absolute; top: 24px; width: 4px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="workflow-table__labels"
              style="height: 48px;"
            >
              <div
                class="workflow-table-label"
                data-cy="workflow-table-label-AL1"
              >
                <div>
                  AL1
                </div>
              </div>
              <div
                class="workflow-table-label"
                data-cy="workflow-table-label-Auto Network"
              >
                <div>
                  Auto Network
                </div>
              </div>
            </div>
            <div
              class="workflow-table__curtain-right"
              style="height: 48px;"
            />
          </div>
          <div
            class="workflow-table__time-axis"
          >
            <div
              class="scroll-bar-override"
              style="width: 1693px;"
            >
              <div
                class="scroll-bar scroll-box--x"
                data-cy="ReactVirtualized__Collection-gutter-scrollbar-override"
              >
                <div
                  class="scroll-bar__bar scroll-box--x"
                  data-cy="ReactVirtualized__Collection-scrollbar-override"
                  style="width: 0px; transform: translate(NaNpx, 0px);"
                />
              </div>
            </div>
            <div
              class="time-axis-wrapper"
              style="width: 1693px;"
            >
              <div
                class="time-axis"
              >
                <svg
                  height="25"
                  style="fill: #fff;"
                  width="120"
                >
                  <g
                    class="workflow-time-axis"
                    fill="none"
                    font-family="sans-serif"
                    font-size="10"
                    text-anchor="middle"
                  >
                    <path
                      class="domain"
                      d="M2,0.5H122"
                      stroke="currentColor"
                    />
                    <g
                      class="tick"
                      opacity="1"
                      transform="translate(69.1,0)"
                    >
                      <line
                        stroke="currentColor"
                        y2="6"
                      />
                      <text
                        dy="0.71em"
                        fill="currentColor"
                        y="9"
                      >
                        19:00
                      </text>
                    </g>
                  </g>
                </svg>
              </div>
            </div>
            <div
              class="workflow-time-range"
            >
              <span
                class="time-range-left"
              >
                2021-05-26
              </span>
              <span
                class="time-range-right"
              >
                2021-05-26
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`workflow non-ideal-states workflow query error matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
      >
        <div
          class="bp4-non-ideal-state"
        >
          <h4
            class="bp4-heading"
          >
            Error
          </h4>
          <div>
            Problem Loading Workflow Data
          </div>
          <div
            class="bp4-spinner bp4-intent-primary"
            role="progressbar"
          >
            <div
              class="bp4-spinner-animation"
            >
              <svg
                height="50"
                stroke-width="8.00"
                viewBox="1.00 1.00 98.00 98.00"
                width="50"
              >
                <path
                  class="bp4-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp4-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
    >
      <div
        class="bp4-non-ideal-state"
      >
        <h4
          class="bp4-heading"
        >
          Error
        </h4>
        <div>
          Problem Loading Workflow Data
        </div>
        <div
          class="bp4-spinner bp4-intent-primary"
          role="progressbar"
        >
          <div
            class="bp4-spinner-animation"
          >
            <svg
              height="50"
              stroke-width="8.00"
              viewBox="1.00 1.00 98.00 98.00"
              width="50"
            >
              <path
                class="bp4-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp4-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`workflow non-ideal-states workflow query loading matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
      >
        <div
          class="bp4-non-ideal-state"
        >
          <h4
            class="bp4-heading"
          >
            Loading
          </h4>
          <div>
            Workflow Data
          </div>
          <div
            class="bp4-spinner bp4-intent-primary"
            role="progressbar"
          >
            <div
              class="bp4-spinner-animation"
            >
              <svg
                height="50"
                stroke-width="8.00"
                viewBox="1.00 1.00 98.00 98.00"
                width="50"
              >
                <path
                  class="bp4-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp4-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
    >
      <div
        class="bp4-non-ideal-state"
      >
        <h4
          class="bp4-heading"
        >
          Loading
        </h4>
        <div>
          Workflow Data
        </div>
        <div
          class="bp4-spinner bp4-intent-primary"
          role="progressbar"
        >
          <div
            class="bp4-spinner-animation"
          >
            <svg
              height="50"
              stroke-width="8.00"
              viewBox="1.00 1.00 98.00 98.00"
              width="50"
            >
              <path
                class="bp4-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp4-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
